--- a/translations/kangyur/placeholders/096-050_toh801,1057-the_incantation_that_dispels_phlegm_diseases.xml
+++ b/translations/kangyur/placeholders/096-050_toh801,1057-the_incantation_that_dispels_phlegm_diseases.xml
@@ -6,20 +6,24 @@
             <titleStmt>
                 <title type="mainTitle" xml:lang="Bo-Ltn">bad kan sel ba'i gzungs/</title>
                 <title type="mainTitle" xml:lang="Sa-Ltn">[no Sanskrit title]</title>
-                <title type="mainTitle" xml:lang="en">The Incantation that Dispels Phlegm Diseases</title>
+                <title type="mainTitle" xml:lang="en">The Dhāraṇī that Dispels Phlegm Diseases</title>
                 <title type="otherTitle" xml:lang="Bo-Ltn">bad kan gyi nad sel ba'i gzungs sngags/</title>
                 <title type="otherTitle" xml:lang="Bo-Ltn">bad kan gyi nad sel ba'i gzungs sngags/</title>
             </titleStmt>
-            <publicationStmt status="">
+            <editionStmt>
+                <edition>v 0.0.1 <date>2022</date>
+                </edition>
+            </editionStmt>
+            <publicationStmt status="3">
                 <idno xml:id="UT22084-096-050"/>
+                <date/>
             </publicationStmt>
             <sourceDesc>
                 <bibl key="toh801" type="text">
                     <ref>Toh 801</ref>
                     <biblScope>vol.96, ff.116v-116v(pp.232-232)</biblScope>
-                    <location count-pages="1">
-                        <start volume="96" page="234"/>
-                        <end volume="96" page="234"/>
+                    <location work="UT4CZ5369" count-pages="1">
+                        <volume number="96" start-page="232" end-page="232"/>
                     </location>
                     <idno parent-id="O1JC114941JC21415" work="http://read.84000.co/sections"/>
                     <idno source-id="O1JC114941JC12547" work="W22084"/>
@@ -27,16 +31,15 @@
                 <bibl key="toh1057" type="text">
                     <ref>Toh 1057</ref>
                     <biblScope>vol.101, ff.189v-189v(pp.378-378)</biblScope>
-                    <location count-pages="1">
-                        <start volume="101" page="380"/>
-                        <end volume="101" page="380"/>
+                    <location work="UT4CZ5369" count-pages="1">
+                        <volume number="101" start-page="378" end-page="378"/>
                     </location>
                     <idno parent-id="O1JC114941JC20568" work="http://read.84000.co/sections"/>
                     <idno source-id="O1JC114941JC12820" work="W22084"/>
                 </bibl>
             </sourceDesc>
             <notesStmt>
-                <note type="lastUpdated">Last updated at 23/01/2019 at 09:08:29 by admin</note>
+                <note type="lastUpdated" date-time="2022-12-15T14:26:52.497Z" user="admin">15/12/2022 14:26:52</note>    <note type="updated" update="translation-status" value="3" date-time="2022-12-15T14:26:48.137Z" user="line-tofte">3</note>    <note type="updated" update="text-version" value="0.0.1" date-time="2022-12-15T14:26:48.137Z" user="line-tofte">0.0.1</note>
             </notesStmt>
         </fileDesc>
     </teiHeader>
