--- a/translations/kangyur/placeholders/096-051_toh802,1058-the_incantation_that_dispels_phthisis.xml
+++ b/translations/kangyur/placeholders/096-051_toh802,1058-the_incantation_that_dispels_phthisis.xml
@@ -6,18 +6,22 @@
             <titleStmt>
                 <title type="mainTitle" xml:lang="Bo-Ltn">k+Sha ya'i nad sel ba'i gzungs/</title>
                 <title type="mainTitle" xml:lang="Sa-Ltn">[no Sanskrit title]</title>
-                <title type="mainTitle" xml:lang="en">The Incantation that Dispels Phthisis</title>
+                <title type="mainTitle" xml:lang="en">The Dhāraṇī that Dispels Phthisis</title>
             </titleStmt>
-            <publicationStmt status="">
+            <editionStmt>
+                <edition>v 0.0.1 <date>2022</date>
+                </edition>
+            </editionStmt>
+            <publicationStmt status="3">
                 <idno xml:id="UT22084-096-051"/>
+                <date/>
             </publicationStmt>
             <sourceDesc>
                 <bibl key="toh802" type="text">
                     <ref>Toh 802</ref>
                     <biblScope>vol.96, ff.116v-117r(pp.232-233)</biblScope>
-                    <location count-pages="2">
-                        <start volume="96" page="234"/>
-                        <end volume="96" page="235"/>
+                    <location work="UT4CZ5369" count-pages="2">
+                        <volume number="96" start-page="232" end-page="233"/>
                     </location>
                     <idno parent-id="O1JC114941JC21415" work="http://read.84000.co/sections"/>
                     <idno source-id="O1JC114941JC12548" work="W22084"/>
@@ -25,16 +29,15 @@
                 <bibl key="toh1058" type="text">
                     <ref>Toh 1058</ref>
                     <biblScope>vol.101, ff.189v-189v(pp.378-378)</biblScope>
-                    <location count-pages="1">
-                        <start volume="101" page="380"/>
-                        <end volume="101" page="380"/>
+                    <location work="UT4CZ5369" count-pages="1">
+                        <volume number="101" start-page="378" end-page="378"/>
                     </location>
                     <idno parent-id="O1JC114941JC20568" work="http://read.84000.co/sections"/>
                     <idno source-id="O1JC114941JC12821" work="W22084"/>
                 </bibl>
             </sourceDesc>
             <notesStmt>
-                <note type="lastUpdated">Last updated at 23/01/2019 at 09:08:30 by admin</note>
+                <note type="lastUpdated" date-time="2022-12-15T14:28:05.984Z" user="admin">15/12/2022 14:28:05</note>    <note type="updated" update="translation-status" value="3" date-time="2022-12-15T14:28:01.623Z" user="line-tofte">3</note>    <note type="updated" update="text-version" value="0.0.1" date-time="2022-12-15T14:28:01.623Z" user="line-tofte">0.0.1</note>
             </notesStmt>
         </fileDesc>
     </teiHeader>
