--- a/translations/kangyur/placeholders/091-080_toh682,901-the_sutra_the_essence_of_amoghapasa.xml
+++ b/translations/kangyur/placeholders/091-080_toh682,901-the_sutra_the_essence_of_amoghapasa.xml
@@ -12,16 +12,20 @@
                 <title type="otherTitle" xml:lang="Bo-Ltn">'phags pa don yod zhags pa'i snying po zhes bya ba theg pa chen po'i mdo/</title>
                 <title type="otherTitle" xml:lang="Sa-Ltn">āryāmoghapāśahṛdaya­nāmamahāyānasūtra</title>
             </titleStmt>
-            <publicationStmt status="">
+            <editionStmt>
+                <edition>v 0.0.1 <date>2022</date>
+                </edition>
+            </editionStmt>
+            <publicationStmt status="3">
                 <idno xml:id="UT22084-091-080"/>
+                <date/>
             </publicationStmt>
             <sourceDesc>
                 <bibl key="toh682" type="text">
                     <ref>Toh 682</ref>
                     <biblScope>vol.91, ff.278v-284r(pp.556-567)</biblScope>
-                    <location count-pages="12">
-                        <start volume="91" page="558"/>
-                        <end volume="91" page="569"/>
+                    <location work="UT4CZ5369" count-pages="12">
+                        <volume number="91" start-page="556" end-page="567"/>
                     </location>
                     <idno parent-id="O1JC114941JC21415" work="http://read.84000.co/sections"/>
                     <idno source-id="O1JC114941JC12420" work="W22084"/>
@@ -29,16 +33,15 @@
                 <bibl key="toh901" type="text">
                     <ref>Toh 901</ref>
                     <biblScope>vol.100, ff.217v-223v(pp.434-446)</biblScope>
-                    <location count-pages="13">
-                        <start volume="100" page="436"/>
-                        <end volume="100" page="448"/>
+                    <location work="UT4CZ5369" count-pages="13">
+                        <volume number="100" start-page="434" end-page="446"/>
                     </location>
                     <idno parent-id="O1JC114941JC20568" work="http://read.84000.co/sections"/>
                     <idno source-id="O1JC114941JC12663" work="W22084"/>
                 </bibl>
             </sourceDesc>
             <notesStmt>
-                <note type="lastUpdated">Last updated at 23/01/2019 at 09:05:41 by admin</note>
+                <note type="lastUpdated" date-time="2022-12-15T14:34:49.772Z" user="admin">15/12/2022 14:34:49</note>    <note type="updated" update="translation-status" value="3" date-time="2022-12-15T14:34:45.406Z" user="line-tofte">3</note>    <note type="updated" update="text-version" value="0.0.1" date-time="2022-12-15T14:34:45.406Z" user="line-tofte">0.0.1</note>
             </notesStmt>
         </fileDesc>
     </teiHeader>
