--- a/translations/kangyur/placeholders/091-080_toh682,901-the_sutra_the_essence_of_amoghapasa.xml
+++ b/translations/kangyur/placeholders/091-080_toh682,901-the_sutra_the_essence_of_amoghapasa.xml
@@ -4,16 +4,16 @@
     <teiHeader>
         <fileDesc>
             <titleStmt>
-                <title type="mainTitle" xml:lang="Bo-Ltn">don yod zhags pa'i snying po'i mdo/</title>
-                <title type="mainTitle" xml:lang="Sa-Ltn">amoghapāśahṛdayasūtra</title>
                 <title type="mainTitle" xml:lang="en">The Sūtra, The Essence of Amoghapāśa</title>
-                <title type="otherTitle" xml:lang="Bo-Ltn">'phags pa don yod zhags pa'i snying po zhes bya ba theg pa chen po'i mdo/</title>
+                <title type="mainTitle" xml:lang="Sa-Ltn">amoghapāśahṛdayasūtra</title>
+                <title type="mainTitle" xml:lang="Bo-Ltn">don yod zhags pa'i snying po'i mdo/</title>
                 <title type="otherTitle" xml:lang="Sa-Ltn">āryāmoghapāśahṛdaya­nāmamahāyānasūtra</title>
                 <title type="otherTitle" xml:lang="Bo-Ltn">'phags pa don yod zhags pa'i snying po zhes bya ba theg pa chen po'i mdo/</title>
-                <title type="otherTitle" xml:lang="Sa-Ltn">āryāmoghapāśahṛdaya­nāmamahāyānasūtra</title>
+                <author role="translatorMain" ref="eft:team-55"/>
+                <author role="translatorEng" ref="eft:person-274">Adam Krug</author>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.1 <date>2022</date>
+                <edition>v 0.0.2 <date>2022</date>
                 </edition>
             </editionStmt>
             <publicationStmt status="3">
@@ -41,7 +41,10 @@
                 </bibl>
             </sourceDesc>
             <notesStmt>
-                <note type="lastUpdated" date-time="2022-12-15T14:34:49.772Z" user="admin">15/12/2022 14:34:49</note>    <note type="updated" update="translation-status" value="3" date-time="2022-12-15T14:34:45.406Z" user="line-tofte">3</note>    <note type="updated" update="text-version" value="0.0.1" date-time="2022-12-15T14:34:45.406Z" user="line-tofte">0.0.1</note>
+                <note type="lastUpdated" date-time="2022-12-15T14:35:16.829Z" user="admin">15/12/2022 14:35:16</note>
+                <note type="updated" update="translation-status" value="3" date-time="2022-12-15T14:34:45.406Z" user="line-tofte">3</note>
+                <note type="updated" update="text-version" value="0.0.1" date-time="2022-12-15T14:34:45.406Z" user="line-tofte">0.0.1</note>
+                <note type="updated" update="text-version" value="0.0.2" date-time="2022-12-15T14:35:11.065Z" user="line-tofte">Auto (update-contributors)</note>
             </notesStmt>
         </fileDesc>
     </teiHeader>
