--- a/translations/kangyur/placeholders/077-007_toh366-the_higher_tantra_of_the_deity_dakinijalasamvara_who_is_the_union_of_all_the_buddhas.xml
+++ b/translations/kangyur/placeholders/077-007_toh366-the_higher_tantra_of_the_deity_dakinijalasamvara_who_is_the_union_of_all_the_buddhas.xml
@@ -13,11 +13,11 @@
                 <title type="otherTitle" xml:lang="en">The Higher Tantra of the Deity Ḍākinījālaśaṃvara, Who Is the Union of All the Buddhas</title>
             </titleStmt>
     <editionStmt>
-                <edition>v 0.0.1 <date>2022</date>
+                <edition>v 0.0.2 <date>2022</date>
                 </edition>
             </editionStmt>
 
-            <publicationStmt status="4">
+            <publicationStmt status="3">
                 <idno xml:id="UT22084-077-007"/>
                 <date/>
             </publicationStmt>
@@ -33,11 +33,13 @@
                 </bibl>
             </sourceDesc>
             <notesStmt>
-                <note type="lastUpdated" date-time="2022-01-11T13:21:26.04Z" user="admin">11/01/2022 13:21:26</note>
+                <note type="lastUpdated" date-time="2022-12-15T14:36:03.461Z" user="admin">15/12/2022 14:36:03</note>
             
     <note type="updated" update="translation-status" value="4" date-time="2022-01-11T13:21:20.041Z" user="line-tofte">4</note>
 
     <note type="updated" update="text-version" value="0.0.1" date-time="2022-01-11T13:21:20.041Z" user="line-tofte">0.0.1</note>
+    <note type="updated" update="translation-status" value="3" date-time="2022-12-15T14:35:59.068Z" user="line-tofte">3</note>
+    <note type="updated" update="text-version" value="0.0.2" date-time="2022-12-15T14:35:59.068Z" user="line-tofte">Auto (update-publication-status)</note>
 </notesStmt>
         </fileDesc>
     </teiHeader>
