--- a/translations/kangyur/placeholders/077-007_toh366-the_higher_tantra_of_the_deity_dakinijalasamvara_who_is_the_union_of_all_the_buddhas.xml
+++ b/translations/kangyur/placeholders/077-007_toh366-the_higher_tantra_of_the_deity_dakinijalasamvara_who_is_the_union_of_all_the_buddhas.xml
@@ -4,16 +4,18 @@
     <teiHeader>
         <fileDesc>
             <titleStmt>
-                <title type="mainTitle" xml:lang="Bo-Ltn">sangs rgyas mnyam sbyor mkha' 'gro sgyu ma bde mchog gi rgyud phyi ma/</title>
-                <title type="mainTitle" xml:lang="Sa-Ltn">sarvabuddhasamayoga­ḍākinījālaśaṃvarottara­tantra</title>
                 <title type="mainTitle" xml:lang="en">The Higher Tantra of the Deity Ḍākinījālaśaṃvara, Who is the Union of All the Buddhas</title>
-                <title type="otherTitle" xml:lang="Bo-Ltn">dpal sangs rgyas thams cad dang mnyam par sbyor ba mkha' 'gro ma sgyu ma bde ba'i mchog ces bya ba'i rgyud phyi ma/</title>
-                <title type="otherTitle" xml:lang="Sa-Ltn">śrīsarvabuddhasamayoga­ḍākinījālaśaṃvaranāmottara­tantra</title>
+                <title type="mainTitle" xml:lang="Sa-Ltn">sarvabuddhasamayoga­ḍākinījālaśaṃvarottara­tantra</title>
+                <title type="mainTitle" xml:lang="Bo-Ltn">sangs rgyas mnyam sbyor mkha' 'gro sgyu ma bde mchog gi rgyud phyi ma/</title>
                 <title type="otherTitle" xml:lang="en">[Note: here and in what follows we are taking "bde mchog" as śaṃvara, while "sdom pa" is saṃvara.]</title>
                 <title type="otherTitle" xml:lang="en">The Higher Tantra of the Deity Ḍākinījālaśaṃvara, Who Is the Union of All the Buddhas</title>
+                <title type="otherTitle" xml:lang="Sa-Ltn">śrīsarvabuddhasamayoga­ḍākinījālaśaṃvaranāmottara­tantra</title>
+                <title type="otherTitle" xml:lang="Bo-Ltn">dpal sangs rgyas thams cad dang mnyam par sbyor ba mkha' 'gro ma sgyu ma bde ba'i mchog ces bya ba'i rgyud phyi ma/</title>
+                <author role="translatorMain" ref="eft:team-55"/>
+                <author role="translatorEng" ref="eft:person-274">Adam Krug</author>
             </titleStmt>
     <editionStmt>
-                <edition>v 0.0.2 <date>2022</date>
+                <edition>v 0.0.3 <date>2022</date>
                 </edition>
             </editionStmt>
 
@@ -33,14 +35,13 @@
                 </bibl>
             </sourceDesc>
             <notesStmt>
-                <note type="lastUpdated" date-time="2022-12-15T14:36:03.461Z" user="admin">15/12/2022 14:36:03</note>
-            
-    <note type="updated" update="translation-status" value="4" date-time="2022-01-11T13:21:20.041Z" user="line-tofte">4</note>
-
-    <note type="updated" update="text-version" value="0.0.1" date-time="2022-01-11T13:21:20.041Z" user="line-tofte">0.0.1</note>
-    <note type="updated" update="translation-status" value="3" date-time="2022-12-15T14:35:59.068Z" user="line-tofte">3</note>
-    <note type="updated" update="text-version" value="0.0.2" date-time="2022-12-15T14:35:59.068Z" user="line-tofte">Auto (update-publication-status)</note>
-</notesStmt>
+                <note type="lastUpdated" date-time="2022-12-15T14:36:33.005Z" user="admin">15/12/2022 14:36:33</note>
+                <note type="updated" update="translation-status" value="4" date-time="2022-01-11T13:21:20.041Z" user="line-tofte">4</note>
+                <note type="updated" update="text-version" value="0.0.1" date-time="2022-01-11T13:21:20.041Z" user="line-tofte">0.0.1</note>
+                <note type="updated" update="translation-status" value="3" date-time="2022-12-15T14:35:59.068Z" user="line-tofte">3</note>
+                <note type="updated" update="text-version" value="0.0.2" date-time="2022-12-15T14:35:59.068Z" user="line-tofte">Auto (update-publication-status)</note>
+                <note type="updated" update="text-version" value="0.0.3" date-time="2022-12-15T14:36:27.214Z" user="line-tofte">Auto (update-contributors)</note>
+            </notesStmt>
         </fileDesc>
     </teiHeader>
     <text>
