--- a/translations/kangyur/placeholders/077-008_toh367-the_supplementary_tantra_to_the_the_higher_tantra_of_the_deity_dakinijalasamvara_who_is_the_union_of_all_the_buddhas.xml
+++ b/translations/kangyur/placeholders/077-008_toh367-the_supplementary_tantra_to_the_the_higher_tantra_of_the_deity_dakinijalasamvara_who_is_the_union_of_all_the_buddhas.xml
@@ -11,23 +11,29 @@
                 <title type="otherTitle" xml:lang="Sa-Ltn">sarvakalpasamuccayanāma­sarvabuddhasamayoga­ḍākinījālaśaṃvarottarottara­tantra</title>
                 <title type="otherTitle" xml:lang="en">The Supplementary Tantra to the The Higher Tantra of the Deity Ḍākinījālaśaṃvara, Who Is the Union of All the Buddhas</title>
             </titleStmt>
-            <publicationStmt status="">
+            <editionStmt>
+                <edition>v 0.0.1 <date>2022</date>
+                </edition>
+            </editionStmt>
+            <publicationStmt status="3">
                 <idno xml:id="UT22084-077-008"/>
+                <date/>
             </publicationStmt>
             <sourceDesc>
                 <bibl key="toh367" type="text">
                     <ref>Toh 367</ref>
                     <biblScope>vol.77, ff.193r-212r(pp.385-423)</biblScope>
-                    <location count-pages="39">
-                        <start volume="77" page="387"/>
-                        <end volume="77" page="425"/>
+                    <location work="UT4CZ5369" count-pages="39">
+                        <volume number="77" start-page="385" end-page="423"/>
                     </location>
                     <idno parent-id="O1JC114941JC21412" work="http://read.84000.co/sections"/>
                     <idno source-id="O1JC114941JC12061" work="W22084"/>
                 </bibl>
             </sourceDesc>
             <notesStmt>
-                <note type="lastUpdated">Last updated at 07/09/2018 at 09:28:38 by admin</note>
+                <note type="lastUpdated" date-time="2022-12-15T14:37:14.096Z" user="admin">15/12/2022 14:37:14</note>
+                <note type="updated" update="translation-status" value="3" date-time="2022-12-15T14:37:09.7Z" user="line-tofte">3</note>
+                <note type="updated" update="text-version" value="0.0.1" date-time="2022-12-15T14:37:09.7Z" user="line-tofte">0.0.1</note>
             </notesStmt>
         </fileDesc>
     </teiHeader>
