--- a/translations/kangyur/placeholders/077-008_toh367-the_supplementary_tantra_to_the_the_higher_tantra_of_the_deity_dakinijalasamvara_who_is_the_union_of_all_the_buddhas.xml
+++ b/translations/kangyur/placeholders/077-008_toh367-the_supplementary_tantra_to_the_the_higher_tantra_of_the_deity_dakinijalasamvara_who_is_the_union_of_all_the_buddhas.xml
@@ -4,15 +4,17 @@
     <teiHeader>
         <fileDesc>
             <titleStmt>
-                <title type="mainTitle" xml:lang="Bo-Ltn">sangs rgyas mnyam sbyor mkha' 'gro sgyu ma bde mchog gi rgyud phyi ma'i phyi ma/</title>
-                <title type="mainTitle" xml:lang="Sa-Ltn">sarvabuddhasamayoga­ḍākinījālaśaṃvarottarottara­tantra</title>
                 <title type="mainTitle" xml:lang="en">The Supplementary Tantra to the The Higher Tantra of the Deity Ḍākinījālaśaṃvara, Who is the Union of All the Buddhas</title>
-                <title type="otherTitle" xml:lang="Bo-Ltn">rtog pa thams cad 'dus pa zhes bya ba sangs rgyas thams cad dang mnyam par sbyor ba mkha' 'gro sgyu ma bde ba'i mchog gi rgyud phyi ma'i phyi ma/</title>
-                <title type="otherTitle" xml:lang="Sa-Ltn">sarvakalpasamuccayanāma­sarvabuddhasamayoga­ḍākinījālaśaṃvarottarottara­tantra</title>
+                <title type="mainTitle" xml:lang="Sa-Ltn">sarvabuddhasamayoga­ḍākinījālaśaṃvarottarottara­tantra</title>
+                <title type="mainTitle" xml:lang="Bo-Ltn">sangs rgyas mnyam sbyor mkha' 'gro sgyu ma bde mchog gi rgyud phyi ma'i phyi ma/</title>
                 <title type="otherTitle" xml:lang="en">The Supplementary Tantra to the The Higher Tantra of the Deity Ḍākinījālaśaṃvara, Who Is the Union of All the Buddhas</title>
+                <title type="otherTitle" xml:lang="Sa-Ltn">sarvakalpasamuccayanāma­sarvabuddhasamayoga­ḍākinījālaśaṃvarottarottara­tantra</title>
+                <title type="otherTitle" xml:lang="Bo-Ltn">rtog pa thams cad 'dus pa zhes bya ba sangs rgyas thams cad dang mnyam par sbyor ba mkha' 'gro sgyu ma bde ba'i mchog gi rgyud phyi ma'i phyi ma/</title>
+                <author role="translatorMain" ref="eft:team-55"/>
+                <author role="translatorEng" ref="eft:person-274">Adam Krug</author>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.1 <date>2022</date>
+                <edition>v 0.0.2 <date>2022</date>
                 </edition>
             </editionStmt>
             <publicationStmt status="3">
@@ -31,9 +33,10 @@
                 </bibl>
             </sourceDesc>
             <notesStmt>
-                <note type="lastUpdated" date-time="2022-12-15T14:37:14.096Z" user="admin">15/12/2022 14:37:14</note>
+                <note type="lastUpdated" date-time="2022-12-15T14:37:50.819Z" user="admin">15/12/2022 14:37:50</note>
                 <note type="updated" update="translation-status" value="3" date-time="2022-12-15T14:37:09.7Z" user="line-tofte">3</note>
                 <note type="updated" update="text-version" value="0.0.1" date-time="2022-12-15T14:37:09.7Z" user="line-tofte">0.0.1</note>
+                <note type="updated" update="text-version" value="0.0.2" date-time="2022-12-15T14:37:45.066Z" user="line-tofte">Auto (update-contributors)</note>
             </notesStmt>
         </fileDesc>
     </teiHeader>
