--- a/translations/kangyur/placeholders/039-004_toh48-the_discourse_on_dreams.xml
+++ b/translations/kangyur/placeholders/039-004_toh48-the_discourse_on_dreams.xml
@@ -18,13 +18,13 @@
                 <consultant role="advisor" ref="eft:person-211">Gareth Sparham</consultant>
                 <author role="translatorEng" ref="eft:person-212">Ben Wood</author>
                 <author role="translatorEng" ref="eft:person-210">Khenpo Kunga Sherab</author>
+                <sponsor ref="eft:sponsor-221">Cosmo Namkha Namgyal Sucharitakul with Kuhn Sucharitakul and Pema Choeden Namgyal Abrahams</sponsor>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.9 <date>2019</date>
+                <edition>v 0.0.15 <date>2019</date>
                 </edition>
             </editionStmt>
-
-            <publicationStmt status="2.h">
+            <publicationStmt status="2.f">
                 <idno xml:id="UT22084-039-004"/>
                 <date/>
             </publicationStmt>
@@ -40,7 +40,7 @@
                 </bibl>
             </sourceDesc>
             <notesStmt>
-                <note type="lastUpdated" date-time="2022-06-09T14:50:09.183Z" user="admin">09/06/2022 14:50:09</note>
+                <note type="lastUpdated" date-time="2022-12-16T07:59:28.337Z" user="admin">16/12/2022 07:59:28</note>
                 <note type="updated" update="text-version" value="v 0.0.1" date-time="2019-12-20T12:56:48.575Z" user="admin">Automated version increment</note>
                 <note type="updated" update="text-version" value="0.0.2" date-time="2021-04-15T10:59:45.927Z" user="line-tofte">Auto (update-contributors)</note>
                 <note type="updated" update="text-version" value="0.0.3" date-time="2021-04-15T11:00:45.643Z" user="line-tofte">Auto (update-contributors)</note>
@@ -50,6 +50,13 @@
                 <note type="updated" update="text-version" value="0.0.6" date-time="2021-11-03T08:52:14.779Z" user="line-tofte">Auto (update-contributors)</note>
                 <note type="updated" update="text-version" value="0.0.7" date-time="2021-11-03T08:52:40.445Z" user="line-tofte">Auto (update-contributors)</note>
                 <note type="updated" update="text-version" value="0.0.8" date-time="2021-11-03T08:52:58.874Z" user="line-tofte">Auto (update-contributors)</note>
+                <note type="updated" update="text-version" value="0.0.10" date-time="2022-07-27T05:54:47.611Z" user="cabie-sim">Auto (update-sponsorship)</note>
+                <note type="updated" update="text-version" value="0.0.11" date-time="2022-07-27T05:55:06.123Z" user="cabie-sim">Auto (update-sponsorship)</note>
+                <note type="updated" update="text-version" value="0.0.12" date-time="2022-09-12T08:03:29.365Z" user="cabie-sim">Auto (update-sponsorship)</note>
+                <note type="updated" update="text-version" value="0.0.13" date-time="2022-09-12T08:03:48.508Z" user="cabie-sim">Auto (update-sponsorship)</note>
+                <note type="updated" update="text-version" value="0.0.14" date-time="2022-10-25T03:58:22.609Z" user="cabie-sim">Auto (update-sponsorship)</note>
+                <note type="updated" update="translation-status" value="2.f" date-time="2022-12-16T07:59:22.509Z" user="line-tofte">2.f</note>
+                <note type="updated" update="text-version" value="0.0.15" date-time="2022-12-16T07:59:22.509Z" user="line-tofte">Auto (update-publication-status)</note>
             </notesStmt>
         </fileDesc>
     </teiHeader>
