--- a/translations/kangyur/placeholders/079-017_toh390-the_tantra_of_the_great_vow.xml
+++ b/translations/kangyur/placeholders/079-017_toh390-the_tantra_of_the_great_vow.xml
@@ -10,23 +10,27 @@
                 <title type="otherTitle" xml:lang="Bo-Ltn">dpal dam tshig chen po'i rgyud kyi rgyal po zhes bya ba/</title>
                 <title type="otherTitle" xml:lang="Sa-Ltn">śrīmahāsamayatantrarājanāma</title>
             </titleStmt>
-            <publicationStmt status="">
+            <editionStmt>
+                <edition>v 0.0.1 <date>2022</date>
+                </edition>
+            </editionStmt>
+            <publicationStmt status="3">
                 <idno xml:id="UT22084-079-017"/>
+                <date/>
             </publicationStmt>
             <sourceDesc>
                 <bibl key="toh390" type="text">
                     <ref>Toh 390</ref>
                     <biblScope>vol.79, ff.213v-216(pp.426-431)</biblScope>
-                    <location count-pages="6">
-                        <start volume="79" page="428"/>
-                        <end volume="79" page="433"/>
+                    <location work="UT4CZ5369" count-pages="6">
+                        <volume number="79" start-page="426" end-page="431"/>
                     </location>
                     <idno parent-id="O1JC114941JC21412" work="http://read.84000.co/sections"/>
                     <idno source-id="O1JC114941JC12091" work="W22084"/>
                 </bibl>
             </sourceDesc>
             <notesStmt>
-                <note type="lastUpdated">Last updated at 07/09/2018 at 09:27:32 by admin</note>
+                <note type="lastUpdated" date-time="2022-12-16T08:56:06.333Z" user="admin">16/12/2022 08:56:06</note>    <note type="updated" update="translation-status" value="3" date-time="2022-12-16T08:56:01.915Z" user="line-tofte">3</note>    <note type="updated" update="text-version" value="0.0.1" date-time="2022-12-16T08:56:01.915Z" user="line-tofte">0.0.1</note>
             </notesStmt>
         </fileDesc>
     </teiHeader>
