--- a/translations/kangyur/placeholders/079-017_toh390-the_tantra_of_the_great_vow.xml
+++ b/translations/kangyur/placeholders/079-017_toh390-the_tantra_of_the_great_vow.xml
@@ -4,14 +4,16 @@
     <teiHeader>
         <fileDesc>
             <titleStmt>
-                <title type="mainTitle" xml:lang="Bo-Ltn">dam tshig chen po'i rgyud/</title>
-                <title type="mainTitle" xml:lang="Sa-Ltn">samayatantra</title>
                 <title type="mainTitle" xml:lang="en">The Tantra of the Great Vow</title>
-                <title type="otherTitle" xml:lang="Bo-Ltn">dpal dam tshig chen po'i rgyud kyi rgyal po zhes bya ba/</title>
+                <title type="mainTitle" xml:lang="Sa-Ltn">samayatantra</title>
+                <title type="mainTitle" xml:lang="Bo-Ltn">dam tshig chen po'i rgyud/</title>
                 <title type="otherTitle" xml:lang="Sa-Ltn">śrīmahāsamayatantrarājanāma</title>
+                <title type="otherTitle" xml:lang="Bo-Ltn">dpal dam tshig chen po'i rgyud kyi rgyal po zhes bya ba/</title>
+                <author role="translatorMain" ref="eft:team-55"/>
+                <author role="translatorEng" ref="eft:person-274">Adam Krug</author>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.1 <date>2022</date>
+                <edition>v 0.0.2 <date>2022</date>
                 </edition>
             </editionStmt>
             <publicationStmt status="3">
@@ -30,7 +32,10 @@
                 </bibl>
             </sourceDesc>
             <notesStmt>
-                <note type="lastUpdated" date-time="2022-12-16T08:56:06.333Z" user="admin">16/12/2022 08:56:06</note>    <note type="updated" update="translation-status" value="3" date-time="2022-12-16T08:56:01.915Z" user="line-tofte">3</note>    <note type="updated" update="text-version" value="0.0.1" date-time="2022-12-16T08:56:01.915Z" user="line-tofte">0.0.1</note>
+                <note type="lastUpdated" date-time="2022-12-16T08:56:42.481Z" user="admin">16/12/2022 08:56:42</note>
+                <note type="updated" update="translation-status" value="3" date-time="2022-12-16T08:56:01.915Z" user="line-tofte">3</note>
+                <note type="updated" update="text-version" value="0.0.1" date-time="2022-12-16T08:56:01.915Z" user="line-tofte">0.0.1</note>
+                <note type="updated" update="text-version" value="0.0.2" date-time="2022-12-16T08:56:36.695Z" user="line-tofte">Auto (update-contributors)</note>
             </notesStmt>
         </fileDesc>
     </teiHeader>
