--- a/translations/kangyur/placeholders/081-018_toh449-the_supplementary_tantra_of_tarayogini.xml
+++ b/translations/kangyur/placeholders/081-018_toh449-the_supplementary_tantra_of_tarayogini.xml
@@ -11,23 +11,27 @@
                 <title type="otherTitle" xml:lang="Sa-Ltn">samājaparamārthasarva­karmodayottaratantrarāja</title>
                 <title type="otherTitle" xml:lang="en">[Note: only in late Degé printings; not in Degé par phud, nor in Narthang, Peking, Cone, or Lhasa Kangyurs. Urga 745A.]</title>
             </titleStmt>
-            <publicationStmt status="">
+            <editionStmt>
+                <edition>v 0.0.1 <date>2022</date>
+                </edition>
+            </editionStmt>
+            <publicationStmt status="3">
                 <idno xml:id="UT22084-081-018"/>
+                <date/>
             </publicationStmt>
             <sourceDesc>
                 <bibl key="toh449" type="text">
                     <ref>Toh 449</ref>
                     <biblScope>vol.81, ff.286v-295a</biblScope>
-                    <location count-pages="29">
-                        <start volume="81" page="591"/>
-                        <end volume="81" page="619"/>
+                    <location work="UT4CZ5369" count-pages="29">
+                        <volume number="81" start-page="589" end-page="617"/>
                     </location>
                     <idno parent-id="O1JC114941JC21412" work="http://read.84000.co/sections"/>
                     <idno source-id="O1JC114941JC12159" work="W22084"/>
                 </bibl>
             </sourceDesc>
             <notesStmt>
-                <note type="lastUpdated">Last updated at 07/09/2018 at 09:35:47 by admin</note>
+                <note type="lastUpdated" date-time="2022-12-16T08:57:47.167Z" user="admin">16/12/2022 08:57:47</note>    <note type="updated" update="translation-status" value="3" date-time="2022-12-16T08:57:42.77Z" user="line-tofte">3</note>    <note type="updated" update="text-version" value="0.0.1" date-time="2022-12-16T08:57:42.77Z" user="line-tofte">0.0.1</note>
             </notesStmt>
         </fileDesc>
     </teiHeader>
