--- a/translations/kangyur/placeholders/081-018_toh449-the_supplementary_tantra_of_tarayogini.xml
+++ b/translations/kangyur/placeholders/081-018_toh449-the_supplementary_tantra_of_tarayogini.xml
@@ -4,15 +4,17 @@
     <teiHeader>
         <fileDesc>
             <titleStmt>
-                <title type="mainTitle" xml:lang="Bo-Ltn">sgrol ma rnal 'byor ma'i rgyud phyi ma/</title>
-                <title type="mainTitle" xml:lang="Sa-Ltn">samājaparamārthasarva­karmodayottaratantra</title>
                 <title type="mainTitle" xml:lang="en">The Supplementary Tantra of Tārāyoginī</title>
-                <title type="otherTitle" xml:lang="Bo-Ltn">phrin las thams cad 'byung ba 'dus pa don dam pa las phyi ma'i rgyud kyi rgyal po/</title>
-                <title type="otherTitle" xml:lang="Sa-Ltn">samājaparamārthasarva­karmodayottaratantrarāja</title>
+                <title type="mainTitle" xml:lang="Sa-Ltn">samājaparamārthasarva­karmodayottaratantra</title>
+                <title type="mainTitle" xml:lang="Bo-Ltn">sgrol ma rnal 'byor ma'i rgyud phyi ma/</title>
                 <title type="otherTitle" xml:lang="en">[Note: only in late Degé printings; not in Degé par phud, nor in Narthang, Peking, Cone, or Lhasa Kangyurs. Urga 745A.]</title>
+                <title type="otherTitle" xml:lang="Sa-Ltn">samājaparamārthasarva­karmodayottaratantrarāja</title>
+                <title type="otherTitle" xml:lang="Bo-Ltn">phrin las thams cad 'byung ba 'dus pa don dam pa las phyi ma'i rgyud kyi rgyal po/</title>
+                <author role="translatorMain" ref="eft:team-55"/>
+                <author role="translatorEng" ref="eft:person-274">Adam Krug</author>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.1 <date>2022</date>
+                <edition>v 0.0.2 <date>2022</date>
                 </edition>
             </editionStmt>
             <publicationStmt status="3">
@@ -31,7 +33,10 @@
                 </bibl>
             </sourceDesc>
             <notesStmt>
-                <note type="lastUpdated" date-time="2022-12-16T08:57:47.167Z" user="admin">16/12/2022 08:57:47</note>    <note type="updated" update="translation-status" value="3" date-time="2022-12-16T08:57:42.77Z" user="line-tofte">3</note>    <note type="updated" update="text-version" value="0.0.1" date-time="2022-12-16T08:57:42.77Z" user="line-tofte">0.0.1</note>
+                <note type="lastUpdated" date-time="2022-12-16T08:58:16.331Z" user="admin">16/12/2022 08:58:16</note>
+                <note type="updated" update="translation-status" value="3" date-time="2022-12-16T08:57:42.77Z" user="line-tofte">3</note>
+                <note type="updated" update="text-version" value="0.0.1" date-time="2022-12-16T08:57:42.77Z" user="line-tofte">0.0.1</note>
+                <note type="updated" update="text-version" value="0.0.2" date-time="2022-12-16T08:58:10.566Z" user="line-tofte">Auto (update-contributors)</note>
             </notesStmt>
         </fileDesc>
     </teiHeader>
