--- a/translations/kangyur/placeholders/091-010_toh613,989-the_incantation_of_the_goddess_cunda.xml
+++ b/translations/kangyur/placeholders/091-010_toh613,989-the_incantation_of_the_goddess_cunda.xml
@@ -9,11 +9,11 @@
                 <title type="mainTitle" xml:lang="Bo-Ltn">lha mo skul byed ma'i gzungs/</title>
                 <title type="otherTitle" xml:lang="Sa-Ltn">āryacundadevīnāmadhāraṇī</title>
                 <title type="otherTitle" xml:lang="Bo-Ltn">'phags pa lha mo skul byed ma zhes bya ba'i gzungs/</title>
-                <author role="translatorMain" ref="eft:team-40"/>
-                <author role="translatorEng" ref="eft:person-74">Ryan Damron</author>
+                <author role="translatorMain" ref="eft:team-55"/>
+                <author role="translatorEng" ref="eft:person-274">Adam Krug</author>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.2 <date>2022</date>
+                <edition>v 0.0.3 <date>2022</date>
                 </edition>
             </editionStmt>
             <publicationStmt status="3">
@@ -41,10 +41,11 @@
                 </bibl>
             </sourceDesc>
             <notesStmt>
-                <note type="lastUpdated" date-time="2022-12-13T14:31:21.826Z" user="admin">13/12/2022 14:31:21</note>
+                <note type="lastUpdated" date-time="2022-12-16T09:16:33.603Z" user="admin">16/12/2022 09:16:33</note>
                 <note type="updated" update="translation-status" value="3" date-time="2022-12-13T14:30:41.181Z" user="line-tofte">3</note>
                 <note type="updated" update="text-version" value="0.0.1" date-time="2022-12-13T14:30:41.181Z" user="line-tofte">0.0.1</note>
                 <note type="updated" update="text-version" value="0.0.2" date-time="2022-12-13T14:31:20.345Z" user="line-tofte">Auto (update-contributors)</note>
+                <note type="updated" update="text-version" value="0.0.3" date-time="2022-12-16T09:16:27.826Z" user="line-tofte">Auto (update-contributors)</note>
             </notesStmt>
         </fileDesc>
     </teiHeader>
